--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 body {
   margin: 0;
   min-height: 100vh;
-  background-color: #000;
+  background-color: #212121;
 }
 
 .parent {
@@ -52,4 +52,51 @@ body {
   box-shadow: 0 0 0px 1px #f11271, 0 0 25px 2px #fd3084,
     inset 0 0 0px 1px #f11271, inset 0 0 30px 2px #fd3084;
   transform: translateY(1px);
+}
+
+.btn_Navarog21 {
+  width: 10em;
+  position: relative;
+  height: 3.5em;
+  border: 3px ridge #149cea;
+  outline: none;
+  background-color: transparent;
+  color: white;
+  transition: 1s;
+  border-radius: 0.3em;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.btn_Navarog21::after {
+  content: '';
+  position: absolute;
+  top: -10px;
+  left: 3%;
+  width: 95%;
+  height: 40%;
+  background-color: #212121;
+  transition: 0.5s;
+  transform-origin: center;
+}
+
+.btn_Navarog21::before {
+  content: '';
+  transform-origin: center;
+  position: absolute;
+  top: 80%;
+  left: 3%;
+  width: 95%;
+  height: 40%;
+  background-color: #212121;
+  transition: 0.5s;
+}
+
+.btn_Navarog21:hover::before,
+.btn_Navarog21:hover::after {
+  transform: scale(0);
+}
+
+.btn_Navarog21:hover {
+  box-shadow: inset 0px 0px 25px #1479ea;
 }
