--- a/style.css
+++ b/style.css
@@ -201,3 +201,59 @@ body {
     transform: translate(0);
   }
 }
+
+.btn_mrhydden {
+  display: flex;
+}
+
+.box_mrhydden {
+  width: 35px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  font-weight: 700;
+  color: #fff;
+  transition: all 0.8s;
+  cursor: pointer;
+  position: relative;
+  background: rgb(58, 165, 253);
+  overflow: hidden;
+}
+
+.box_mrhydden:before {
+  content: 'W';
+  position: absolute;
+  top: 0;
+  background: #0f0f0f;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(100%);
+  transition: transform 0.4s;
+}
+
+.box_mrhydden:nth-child(2)::before {
+  transform: translateY(-100%);
+  content: 'O';
+}
+
+.box_mrhydden:nth-child(3)::before {
+  content: 'R';
+}
+
+.box_mrhydden:nth-child(4)::before {
+  transform: translateY(-100%);
+  content: 'L';
+}
+
+.box_mrhydden:nth-child(5)::before {
+  content: 'D';
+}
+
+.btn_mrhydden:hover .box_mrhydden:before {
+  transform: translateY(0);
+}
